
2002-04-19  Dave Neary <bolsh@gimp.org>

	* src/adjmtrx.c:
	* src/bintree.c:
	* src/connect4.c:
	* src/evaluate.c:
	* src/heurist.c:
	* src/ia_main.c:
	* src/pbsolver.c:
	* src/playgame.c:
	* src/proto.h: Ran these source files through dos2unix to
	  get rid of CRLF.

2002-04-19  Dave Neary <bolsh@gimp.org>

	* src/dialog.c:
	* src/connect4.c: Moved Giuliano's copyright message to
	  the About dialog - it really shouldn't be dumped to
	  stdout.

2002-04-19  Tim Musson <trmusson@ihug.co.nz>

	* help/C/gnect.sgml: removed
	* help/C/gnect.xml & legal.xml: new files
	* help/C/Makefile.am & gnect-C.omf: updated for the new manual.

2002-04-19  Tim Musson <trmusson@ihug.co.nz>

	* dialog.c:
	  - Removed needless test for About dialog logo.
	  - Velena's homepage missing in action - removed URL from About.
	    Was: http://www.ce.unipr.it/~gbe/velena.html
	* data/gnect.desktop.in: Changed wording in Comment field.
	* data/clean_50x50.gnect: Grid colour to new format.
	* dialog.c, gui.c, gnect.c, main.c, main.h, gfx.c, sound.c,
	  prefs.c, theme.c, brain.c:
	  - Fixed my botched indentation.

2002-04-16  Tim Musson <trmusson@ihug.co.nz>

	* data/clean_40x40_nightfall.gnect:
	  - Theme's grid colour changed to the new format.
	* dialog.c:
	  - Scorebox icon now uses gtk_image_new_from_file.
	  - Added gtk_window_set_transient_for About dialog.
	  - Support for translator credits in About dialog.
	  - Updated dates and email addresses.
	* gui.c:
	  - Removed old inclusion of gnome-window-icon.h
	  - Geometry parsing now done by gtk_window_parse_geometry.
	* dialog.c, dialog.h, gui.c, gui.h, gnect.c, gnect.h,
	  main.c, main.h, gfx.c, gfx.h, sound.c, sound.h, prefs.c,
	  prefs.h, theme.c, theme.h, brain.c, brain.h:
	  - Code formatting tweaked to better match Gnome's style.

2002-04-16  Bastien Nocera  <hadess@hadess.net>

	* data/Makefile.am:
	* data/gnect.desktop:
	* data/gnect.desktop.in: make gnect a proper gnome2 app wrt desktop
	file
